[package]
name = "solana-logger"
version = "1.8.0"
description = "Solana Logger"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-logger"
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"

[lib]
name = "solana_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
